2008-05-13  Inge Wallin  <inge@lysator.liu.se>

	Fix include directives (Krazy issue)
	* src/geoshape/GeoShape.cpp: Remove double include
	* src/geoshape/GeoToolFactory.cpp: Include own header first

	Introduce d-pointer to a public class
	* src/lib/TileCreator.{h,cpp}: d-pointerify

2008-05-13  Claudiu Covaci  <claudiu.covaci@gmail.com>

    * src/lib/geodata/data/GeoDataColorStyle.{h,cpp}:
    * src/lib/geodata/data/GeoDataContainer.{h,cpp}:
    * src/lib/geodata/data/GeoDataDocument.{h,cpp}:
    * src/lib/geodata/data/GeoDataFeature.{h,cpp}:
    * src/lib/geodata/data/GeoDataFolder.h:
    * src/lib/geodata/data/GeoDataHotSpot.{h,cpp}:
    * src/lib/geodata/data/GeoDataIconStyle.{h,cpp}:
    * src/lib/geodata/data/GeoDataLabelStyle.h:
    * src/lib/geodata/data/GeoDataStyleSelector.h:

    - Change to use the d-pointer technique
    - Add GEODATA_EXPORT to class declarations

2008-05-12  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/data/GeoDataLineString.{cpp,h}:
    * src/lib/geodata/data/GeoDataLinearRing.{cpp,h}:
    * src/lib/geodata/data/GeoDataLatLonAltBox.{cpp,h}:
    * src/lib/geodata/CMakeLists.txt:

    - Adding GeoDataLinearRing
    - Adding more GeoDataLineString properties

    * src/lib/ViewportParams.{cpp,h}:
    * src/lib/AbstractProjection.{cpp,h}:

    - Adding latLonAltBox() to ViewportParams and AbstractProjection
    - Adding rectOutline() to AbstractProjection

2008-05-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/data/GeoDataLineString.{cpp,h}:
    * src/lib/geodata/CMakeLists.txt:

    - Adding the new GeoDataLineString which is supposed
      to replace GeoPolygon at some point.

    * src/lib/MarbleMap.{cpp,h}:

    - Getting rid of a leftover occurance of quickDirty()

2008-05-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/global.h:
    * src/lib/BoundingBox.h:
    * src/lib/geodata/data/GeoDataLatLonAltBox.{cpp,h}:
    * src/lib/geodata/data/GeoDataPoint.{cpp,h}:
    * src/lib/geodata/data/GeoDataGeometry.cpp: