@@ -1,5 +1,9 @@
 2008-05-13  Inge Wallin  <inge@lysator.liu.se>
 
+	Fix an old FIXME.
+	* src/lib/MarbleWidget.cpp (class MarbleWidgetPrivate): Remove
+	m_justModified, since it is never used.
+
 	Fix include directives (Krazy issue)
 	* src/geoshape/GeoShape.cpp: Remove double include
 	* src/geoshape/GeoToolFactory.cpp: Include own header first
